--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/beatles_anthology_box" />
 
+    <Button
+        android:id="@+id/action_button"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="@string/open"
+        app:layout_constraintEnd_toEndOf="@id/imageView"
+        app:layout_constraintStart_toStartOf="@id/imageView"
+        app:layout_constraintTop_toBottomOf="@id/imageView" />
+
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
@@ -55,8 +65,8 @@
             tools:layout_editor_absoluteY="288dp" />
     </ScrollView>
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:name="com.example.fragmentexample1updated.SimpleFragment"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
